Fixed Besetzung und Insta-Grid für Mobile

--- a/aus-der-asche/index.html
+++ b/aus-der-asche/index.html
@@ -199,63 +199,63 @@
                             <div class="grid-header">Bemerkung</div>
                             
                             <!-- Inhalt -->
-                            <div class="grid-item">Dido</div>
+                            <div class="grid-item">Dido<br><span>Herrscherin Karthagos</span></div>
                             <div class="grid-item">Greta Hoss</div>
                             <div class="grid-item">Herrscherin Karthagos</div>
 
-                            <div class="grid-item">Aeneas</div>
+                            <div class="grid-item">Aeneas<br><span>Trojanischer Prinz, Enkel des Zeus</span></div>
                             <div class="grid-item">Gregor Lawrenz</div>
                             <div class="grid-item">Trojanischer Prinz, Enkel des Zeus</div>
 
-                            <div class="grid-item">Hera</div>
+                            <div class="grid-item">Hera<br><span>Gemahlin des Zeus, Schutzpatronin Karthagos</span></div>
                             <div class="grid-item">Pauline Findewirth</div>
                             <div class="grid-item">Gemahlin des Zeus, Schutzpatronin Karthagos</div>
 
-                            <div class="grid-item">Zeus</div>
+                            <div class="grid-item">Zeus<br><span>Herrscher über den Olymp, Großvater des Aeneas</span></div>
                             <div class="grid-item">Julian Allescher</div>
                             <div class="grid-item">Herrscher über den Olymp, Großvater des Aeneas</div>
 
-                            <div class="grid-item">Atropos</div>
+                            <div class="grid-item">Atropos<br><span>Eine der Schicksalsschwestern</span></div>
                             <div class="grid-item">Corinna Storbeck</div>
                             <div class="grid-item">Eine der Schicksalsschwestern</div>
 
-                            <div class="grid-item">Láchesis</div>
+                            <div class="grid-item">Láchesis<br><span>Eine der Schicksalsschwestern</span></div>
                             <div class="grid-item">Friederike Großmann</div>
                             <div class="grid-item">Eine der Schicksalsschwestern</div>
 
-                            <div class="grid-item">Klotho</div>
+                            <div class="grid-item">Klotho<br><span>Eine der Schicksalsschwestern</span></div>
                             <div class="grid-item">Clara Komann</div>
                             <div class="grid-item">Eine der Schicksalsschwestern</div>
 
-                            <div class="grid-item">Hermes</div>
+                            <div class="grid-item">Hermes<br><span>Schutzgott der Reisenden und olympischer Götterbote</span></div>
                             <div class="grid-item">Tarik Wilke</div>
                             <div class="grid-item">Schutzgott der Reisenden und olympischer Götterbote</div>
 
-                            <div class="grid-item">Eros</div>
+                            <div class="grid-item">Eros<br><span>Gott der erotischen Liebe</span></div>
                             <div class="grid-item">Ben S.</div>
                             <div class="grid-item">Gott der erotischen Liebe</div>
 
-                            <div class="grid-item">Hades</div>
+                            <div class="grid-item">Hades<br><span>Herrscher über die Unterwelt</span></div>
                             <div class="grid-item"></div>
                             <div class="grid-item">Herrscher über die Unterwelt</div>
 
-                            <div class="grid-item">Misenos</div>
+                            <div class="grid-item">Misenos<br><span>Barde im Gefolge des Aeneas</span></div>
                             <div class="grid-item">Nico Westerbeck</div>
                             <div class="grid-item">Barde im Gefolge des Aeneas</div>
 
-                            <div class="grid-item">Achates</div>
+                            <div class="grid-item">Achates<br><span>Treuester Freund des Aeneas</span></div>
                             <div class="grid-item">Alexander Dyck</div>
                             <div class="grid-item">Treuester Freund des Aeneas</div>
 
-                            <div class="grid-item">Tartos</div>
+                            <div class="grid-item">Tartos<br><span>Spielmann und Sänger in Didos Hof</span></div>
                             <div class="grid-item"></div>
                             <div class="grid-item">Spielmann und Sänger in Didos Hof</div>
 
-                            <div class="grid-item">Selene</div>
+                            <div class="grid-item">Selene<br><span>Didos Schwester und engste Vertraute</span></div>
                             <div class="grid-item">Anna Shaposhnik</div>
                             <div class="grid-item">Didos Schwester und engste Vertraute</div>
 
-                            <div class="grid-item">Didos Leibwache</div>
+                            <div class="grid-item">Didos Leibwache<br><span>Neben Selene engster Vertrauter Didos</span></div>
                             <div class="grid-item">Sebastian Hörner</div>
                             <div class="grid-item">Neben Selene engster Vertrauter Didos</div>
                         </div>
