--- a/pandora-prometheus/index.html
+++ b/pandora-prometheus/index.html
@@ -189,7 +189,86 @@
                         <figcaption>Noch lachen Pandora und Prometheus über die olympischen Gottheiten</figcaption>
                     </figure>
                 </div>
+                <article class="flex flex-row flex-justify-evenly flex-wrap flex-align-center">
+                    <div class="besetzung">
+                        <section>
+                            <h2>Besetzung</h2>
+                            <div class="grid">
+                                <!-- Header -->
+                                <div class="grid-header">Rolle</div>
+                                <div class="grid-header">Schauspieler:in</div>
+                                <div class="grid-header">Bemerkung</div>
+                                
+                                <!-- Inhalt -->
+                                <div class="grid-item">Pandora<br><span>Hüterin der Emotionen</span></div>
+                                <div class="grid-item">Pauline Findewirth</div>
+                                <div class="grid-item">Hüterin der Emotionen</div>
 
+                                <div class="grid-item">Prometheus<br><span>Feuerbringerin</span></div>
+                                <div class="grid-item">Anna Shaposhnik, Jasmine Schmauder</div>
+                                <div class="grid-item">Feuerbringerin</div>
+
+                                <div class="grid-item">Apollon<br><span>Gott der Künste</span></div>
+                                <div class="grid-item">Julian Allescher</div>
+                                <div class="grid-item">Gott der Künste</div>
+
+                                <div class="grid-item">Kalliope<br><span>Größte aller Musen</span></div>
+                                <div class="grid-item">Corinna Storbeck</div>
+                                <div class="grid-item">Größte aller Musen</div>
+
+                                <div class="grid-item">Hermes<br><span>Göttlicher Nachrichtenüberbringer</span></div>
+                                <div class="grid-item">Leonard Strübin</div>
+                                <div class="grid-item">Göttlicher Nachrichtenüberbringer</div>
+
+                                <div class="grid-item">Neugier<br><span></span></div>
+                                <div class="grid-item">Giulia B., Pauline Findewirth, Maya Göpfert, Friederike Großmann, Joule Neetz, Anna Shaposhnik, Corinna Storbeck, Leonard Strübin </div>
+                                <div class="grid-item"></div>
+
+                                <div class="grid-item">Einsamkeit<br><span>Partnerchoreografie mit Feuerpoi und brennendem Ropedart</span></div>
+                                <div class="grid-item">Giulia B., Anna Shaposhnik</div>
+                                <div class="grid-item">Partnerchoreografie mit Feuerpoi und brennendem Ropedart</div>
+
+                                <div class="grid-item">Wut<br><span>Choreografie mit brenndenden Fächern</span></div>
+                                <div class="grid-item">Pauline Findewirth, Anna Shaposhnik, Corinna Storbeck</div>
+                                <div class="grid-item">Choreografie mit brenndenden Fächern</div>
+
+                                <div class="grid-item">Liebe<br><span></span></div>
+                                <div class="grid-item">Maya Göpfert, Laura Morales Pineda, Joule Neetz, Corinna Storbeck, Leonard Strübin</div>
+                                <div class="grid-item"></div>
+
+                                <div class="grid-item">Ekstase<br><span></span></div>
+                                <div class="grid-item">Giulia B., Annalisa Chiapperino, Maya Göpfert, Friederike Großmann, Laura Morales Pineda, Jasmine Schmauder, Anna Shaposhnik, Leonard Strübin</div>
+                                <div class="grid-item"></div>
+
+                                <div class="grid-item">Schmerz<br><span></span></div>
+                                <div class="grid-item">Giulia B.</div>
+                                <div class="grid-item"></div>
+
+                                <div class="grid-item">Mut<br><span></span></div>
+                                <div class="grid-item">Maya Göpfert, Joule Neetz, Jasmine Schmauder, Anna Shaposhnik, Leonard Strübin</div>
+                                <div class="grid-item"></div>
+
+                                <div class="grid-item">Stolz<br><span></span></div>
+                                <div class="grid-item">Anna Shaposhnik</div>
+                                <div class="grid-item"></div>
+
+                                <div class="grid-item">Hoffnung<br><span></span></div>
+                                <div class="grid-item">Pauline Findewirth</div>
+                                <div class="grid-item"></div>
+
+                                <div class="grid-item">Musiker<br><span>Trompete, Kaval, Musikproduktion, Tontechnik</span></div>
+                                <div class="grid-item">Tarik Wilke</div>
+                                <div class="grid-item">Trompete, Kaval, Musikproduktion, Tontechnik</div>
+
+                                <div class="grid-item">Musikerin<br><span>Keyboard, Zimbeln, Klangschalen, Shrutibox, Komposition</span></div>
+                                <div class="grid-item">Giulia B.</div>
+                                <div class="grid-item">Keyboard, Zimbeln, Klangschalen, Shrutibox, Komposition</div>
+
+                            </div>
+                            
+                        </section>
+                    </div>
+                </article>
 
             </article>
         </div>
