--- a/pandora-prometheus/index.html
+++ b/pandora-prometheus/index.html
@@ -220,41 +220,41 @@
                                 <div class="grid-item">Leonard Strübin</div>
                                 <div class="grid-item">Göttlicher Nachrichtenüberbringer</div>
 
-                                <div class="grid-item">Neugier<br><span></span></div>
+                                <div class="grid-item">Neugier<br><span>Verschiedene Tools</span></div>
                                 <div class="grid-item">Giulia B., Pauline Findewirth, Maya Göpfert, Friederike Großmann, Joule Neetz, Anna Shaposhnik, Corinna Storbeck, Leonard Strübin </div>
-                                <div class="grid-item"></div>
+                                <div class="grid-item">Verschiedene Tools</div>
 
-                                <div class="grid-item">Einsamkeit<br><span>Partnerchoreografie mit Feuerpoi und brennendem Ropedart</span></div>
+                                <div class="grid-item">Einsamkeit<br><span>Poi, Ropedart</span></div>
                                 <div class="grid-item">Giulia B., Anna Shaposhnik</div>
-                                <div class="grid-item">Partnerchoreografie mit Feuerpoi und brennendem Ropedart</div>
+                                <div class="grid-item">Poi, Ropedart</div>
 
-                                <div class="grid-item">Wut<br><span>Choreografie mit brenndenden Fächern</span></div>
+                                <div class="grid-item">Wut<br><span>Fächer</span></div>
                                 <div class="grid-item">Pauline Findewirth, Anna Shaposhnik, Corinna Storbeck</div>
-                                <div class="grid-item">Choreografie mit brenndenden Fächern</div>
+                                <div class="grid-item">Fächer</div>
 
-                                <div class="grid-item">Liebe<br><span></span></div>
+                                <div class="grid-item">Liebe<br><span>Handcandles(Palm Torches)</span></div>
                                 <div class="grid-item">Maya Göpfert, Laura Morales Pineda, Joule Neetz, Corinna Storbeck, Leonard Strübin</div>
-                                <div class="grid-item"></div>
+                                <div class="grid-item">Handcandles(Palm Torches)</div>
 
-                                <div class="grid-item">Ekstase<br><span></span></div>
+                                <div class="grid-item">Ekstase<br><span>Handcandles(Palm Torches)</span></div>
                                 <div class="grid-item">Giulia B., Annalisa Chiapperino, Maya Göpfert, Friederike Großmann, Laura Morales Pineda, Jasmine Schmauder, Anna Shaposhnik, Leonard Strübin</div>
-                                <div class="grid-item"></div>
+                                <div class="grid-item">Handcandles(Palm Torches)</div>
 
-                                <div class="grid-item">Schmerz<br><span></span></div>
+                                <div class="grid-item">Schmerz<br><span>Ropedart</span></div>
                                 <div class="grid-item">Giulia B.</div>
-                                <div class="grid-item"></div>
+                                <div class="grid-item">Ropedart</div>
 
-                                <div class="grid-item">Mut<br><span></span></div>
+                                <div class="grid-item">Mut<br><span>Dragon Staff, Hula Hoop, Ropedart</span></div>
                                 <div class="grid-item">Maya Göpfert, Joule Neetz, Jasmine Schmauder, Anna Shaposhnik, Leonard Strübin</div>
-                                <div class="grid-item"></div>
+                                <div class="grid-item">Dragon Staff, Hula Hoop, Ropedart</div>
 
-                                <div class="grid-item">Stolz<br><span></span></div>
+                                <div class="grid-item">Stolz<br><span>Fächer</span></div>
                                 <div class="grid-item">Anna Shaposhnik</div>
-                                <div class="grid-item"></div>
+                                <div class="grid-item">Fächer</div>
 
-                                <div class="grid-item">Hoffnung<br><span></span></div>
+                                <div class="grid-item">Hoffnung<br><span>Buugeng</span></div>
                                 <div class="grid-item">Pauline Findewirth</div>
-                                <div class="grid-item"></div>
+                                <div class="grid-item">Buugeng</div>
 
                                 <div class="grid-item">Musiker<br><span>Trompete, Kaval, Musikproduktion, Tontechnik</span></div>
                                 <div class="grid-item">Tarik Wilke</div>
