--- a/pandora-prometheus/index.html
+++ b/pandora-prometheus/index.html
@@ -232,13 +232,13 @@
                                 <div class="grid-item">Pauline Findewirth, Anna Shaposhnik, Corinna Storbeck</div>
                                 <div class="grid-item">Fächer</div>
 
-                                <div class="grid-item">Liebe<br><span>Handcandles(Palm Torches)</span></div>
+                                <div class="grid-item">Liebe<br><span>Handcandles (Palm Torches)</span></div>
                                 <div class="grid-item">Maya Göpfert, Laura Morales Pineda, Joule Neetz, Corinna Storbeck, Leonard Strübin</div>
-                                <div class="grid-item">Handcandles(Palm Torches)</div>
+                                <div class="grid-item">Handcandles (Palm Torches)</div>
 
-                                <div class="grid-item">Ekstase<br><span>Handcandles(Palm Torches)</span></div>
+                                <div class="grid-item">Ekstase<br><span>Handcandles (Palm Torches)</span></div>
                                 <div class="grid-item">Giulia B., Annalisa Chiapperino, Maya Göpfert, Friederike Großmann, Laura Morales Pineda, Jasmine Schmauder, Anna Shaposhnik, Leonard Strübin</div>
-                                <div class="grid-item">Handcandles(Palm Torches)</div>
+                                <div class="grid-item">Handcandles (Palm Torches)</div>
 
                                 <div class="grid-item">Schmerz<br><span>Ropedart</span></div>
                                 <div class="grid-item">Giulia B.</div>
@@ -268,13 +268,13 @@
                             <br>
                             <br>
                             <div class="grid">
-                                <div class="grid-item">Photographie<br><span>Fotos der zweiten Vorstellung (29.September 2024)</span></div>
+                                <div class="grid-item">Photographie<br><span>Fotos (29.September 2024)</span></div>
                                 <div class="grid-item"><a href="https://www.instagram.com/ansvetr.ph/?hl=de">AnsVetr Photography</a></div>
                                 <div class="grid-item">Fotos der zweiten Vorstellung (29.September 2024)</div>
 
                                 <div class="grid-item">Kinematographie<br><span>Videos der Generalprobe und der dritten Vorstellung (5.Oktober 2024)</span></div>
                                 <div class="grid-item">Ferdinand Will</div>
-                                <div class="grid-item">Videos der Generalprobe und der dritten Vorstellung (5.Oktober 2024)</div>
+                                <div class="grid-item">Videos (5.Oktober 2024)</div>
 
                             </div>
 
@@ -793,9 +793,9 @@
                                 rel="noopener noreferrer">
                                 <div class="ig-ui"><img src="../assets/img/icons/IG-UI-Carousel.svg" alt="Instagram Carousel Icon"></div>
                                 <figure>
-                                    <img src="../assets/img/fotos/p-p-24/1x/feuerübergabe.webp"
-                                    srcset="../assets/img/fotos/p-p-24/1x/feuerübergabe.webp 768w,
-                                            ../assets/img/fotos/p-p-24/2x/feuerübergabe.webp 1280w"
+                                    <img src="../assets/img/fotos/p-p-24/1x/feueruebergabe.webp"
+                                    srcset="../assets/img/fotos/p-p-24/1x/feueruebergabe.webp 768w,
+                                            ../assets/img/fotos/p-p-24/2x/feueruebergabe.webp 1280w"
                                          alt="Prometheus (Jasmine Schmauder) mit Fackel in der Hand und die seelenlose Menschmaschine (Pauline Findewirth, Corinna Storbeck, Friederike Großmann, Anna Shaposhnik).">
                                     <figcaption>Jasmine Schmauder als Prometheus möchte den seelenlosen Menschen (Pauline Findewirth, Corinna Storbeck, Friederike Großmann, Anna Shaposhnik) durch das Feuer wahraftiges Leben einhauchen. Foto von AnsVetr Photography.</figcaption>
                                 </figure>
