Julian und Corinna auf Insta verlinkt

--- a/pandora-prometheus/index.html
+++ b/pandora-prometheus/index.html
@@ -205,16 +205,16 @@
                                 <div class="grid-item">Hüterin der Emotionen</div>
 
                                 <div class="grid-item">Prometheus<br><span>Feuerbringerin</span></div>
-                                <div class="grid-item">Anna Shaposhnik, Jasmine Schmauder</div>
+                                <div class="grid-item">Anna Shaposhnik,<br> Jasmine Schmauder</div>
                                 <div class="grid-item">Feuerbringerin</div>
 
                                 <div class="grid-item">Apollon<br><span>Gott der Künste</span></div>
-                                <div class="grid-item">Julian Allescher</div>
+                                <div class="grid-item"><a href="https://www.instagram.com/hylian_allescher/?hl=de">Julian Allescher</a></div>
                                 <div class="grid-item">Gott der Künste</div>
 
                                 <div class="grid-item">Kalliope<br><span>Größte aller Musen</span></div>
-                                <div class="grid-item">Corinna Storbeck</div>
-                                <div class="grid-item">Größte aller Musen</div>
+                                <div class="grid-item"><a href="https://www.instagram.com/corinna.cleopatra/?hl=de">Corinna Storbeck</a></div>
+                                <div class="grid-item">Die Schönstimmige, Größte der neun Musen</div>
 
                                 <div class="grid-item">Hermes<br><span>Göttlicher Nachrichtenüberbringer</span></div>
                                 <div class="grid-item">Leonard Strübin</div>
