--- a/pandora-prometheus/index.html
+++ b/pandora-prometheus/index.html
@@ -270,9 +270,9 @@
                             <div class="grid">
                                 <div class="grid-item">Photographie<br><span>Fotos (29.September 2024)</span></div>
                                 <div class="grid-item"><a href="https://www.instagram.com/ansvetr.ph/?hl=de">AnsVetr Photography</a></div>
-                                <div class="grid-item">Fotos der zweiten Vorstellung (29.September 2024)</div>
+                                <div class="grid-item">Fotos (29.September 2024)</div>
 
-                                <div class="grid-item">Kinematographie<br><span>Videos der Generalprobe und der dritten Vorstellung (5.Oktober 2024)</span></div>
+                                <div class="grid-item">Kinematographie<br><span>Videos (5.Oktober 2024)</span></div>
                                 <div class="grid-item">Ferdinand Will</div>
                                 <div class="grid-item">Videos (5.Oktober 2024)</div>
 
