--- a/pandora-prometheus/index.html
+++ b/pandora-prometheus/index.html
@@ -221,7 +221,7 @@
                                 <div class="grid-item">Göttlicher Nachrichtenüberbringer</div>
 
                                 <div class="grid-item">Neugier<br><span>Verschiedene Tools</span></div>
-                                <div class="grid-item">Giulia B., Pauline Findewirth, Maya Göpfert, Friederike Großmann, Joule Neetz, Anna Shaposhnik, Corinna Storbeck, Leonard Strübin </div>
+                                <div class="grid-item">Giulia B., Pauline Findewirth, Maya Göpfert, Friederike Großmann, Joule Neetz, Jasmine Schmauder, Anna Shaposhnik, Corinna Storbeck, Leonard Strübin </div>
                                 <div class="grid-item">Verschiedene Tools</div>
 
                                 <div class="grid-item">Einsamkeit<br><span>Poi, Ropedart</span></div>
@@ -245,7 +245,7 @@
                                 <div class="grid-item">Ropedart</div>
 
                                 <div class="grid-item">Mut<br><span>Dragon Staff, Hula Hoop, Ropedart</span></div>
-                                <div class="grid-item">Maya Göpfert, Joule Neetz, Jasmine Schmauder, Anna Shaposhnik, Leonard Strübin</div>
+                                <div class="grid-item">Maya Göpfert, Joule Neetz, Jasmine Schmauder</div>
                                 <div class="grid-item">Dragon Staff, Hula Hoop, Ropedart</div>
 
                                 <div class="grid-item">Stolz<br><span>Fächer</span></div>
@@ -255,6 +255,14 @@
                                 <div class="grid-item">Hoffnung<br><span>Buugeng</span></div>
                                 <div class="grid-item">Pauline Findewirth</div>
                                 <div class="grid-item">Buugeng</div>
+
+                                <div class="grid-item">Mensch<br><span>Ropedart</span></div>
+                                <div class="grid-item">Jasmine Schmauder</div>
+                                <div class="grid-item">Ropedart</div>
+
+                                <div class="grid-item">Gefühle<br><span>Hand Candles (Palm Torches)</span></div>
+                                <div class="grid-item">Giulia B., Friederike Großmann, Maya Göpfert, Laura Morales Pineda, Leonard Strübin</div>
+                                <div class="grid-item">Hand Candles (Palm Torches)</div>
 
                                 <div class="grid-item">Musiker<br><span>Trompete, Kaval, Musikproduktion, Tontechnik</span></div>
                                 <div class="grid-item">Tarik Wilke</div>
