--- a/pandora-prometheus/index.html
+++ b/pandora-prometheus/index.html
@@ -39,6 +39,7 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="../segno.ico/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+    <meta name="google-site-verification" content="9o9G0k4IkoQBYAA3HHeH-cQSnS0iz2kVWwGbmmbPLPU" />
 
 <!-- Semantische Struktur für Google Rich Snippets -->
     <script type="application/ld+json"> 
