Semantic structure gefixt

--- a/pandora-prometheus/index.html
+++ b/pandora-prometheus/index.html
@@ -84,6 +84,7 @@
                   "streetAddress": "Eichhörnchensteig 3",
                   "addressLocality": "Berlin",
                   "postalCode": "14193",
+                  "addressCountry": "DE"
                     }
                 },
               "eventStatus": "https://schema.org/EventScheduled",
@@ -151,6 +152,7 @@
                       "streetAddress": "Eichhörnchensteig 3",
                       "addressLocality": "Berlin",
                       "postalCode": "14193",
+                      "addressCountry": "DE"
                         }
                     },
                 "eventStatus": "https://schema.org/EventScheduled",
@@ -218,6 +220,7 @@
                       "streetAddress": "Eichhörnchensteig 3",
                       "addressLocality": "Berlin",
                       "postalCode": "14193",
+                      "addressCountry": "DE"
                         }
                     },
                 "eventStatus": "https://schema.org/EventScheduled",
@@ -285,6 +288,7 @@
                       "streetAddress": "Eichhörnchensteig 3",
                       "addressLocality": "Berlin",
                       "postalCode": "14193",
+                      "addressCountry": "DE"
                         }
                     },
                 "eventStatus": "https://schema.org/EventScheduled",
