og graph metatags

--- a/pandora-prometheus/index.html
+++ b/pandora-prometheus/index.html
@@ -41,6 +41,12 @@
     <meta name="theme-color" content="#ffffff">
     <meta name="google-site-verification" content="9o9G0k4IkoQBYAA3HHeH-cQSnS0iz2kVWwGbmmbPLPU" />
 
+    <meta property="og:title" content="Pandora und Prometheus (Theater zur blauen Stunde)">
+    <meta property="og:description" content="Erlebe 'Pandora & Prometheus - Das Lied vom Feuer': eine spektakuläre Mischung aus Feuerspiel, Live-Musik, Tanz und Schauspiel. Entdecke die mitreißende Inszenierung von Mythen und Legenden im Abenteuerzentrum Berlin. Tickets sichern!">
+    <meta property="og:image" content="https://www.blauestunde.theater/assets/img/fotos/Pandora-und-Prometheus_square-1200-20251920.jpg">
+    <meta property="og:url" content="https://www.blauestunde.theater/pandora-prometheus/">
+    <meta property="og:type" content="website">
+
 <!-- Semantische Struktur für Google Rich Snippets -->
     <script type="application/ld+json"> 
         {
