Added Lars to besetzungsliste

--- a/pandora-prometheus/index.html
+++ b/pandora-prometheus/index.html
@@ -552,7 +552,7 @@
                                 <div class="grid-item">Handcandles (Palm Torches)</div>
 
                                 <div class="grid-item">Ekstase<br><span>Handcandles (Palm Torches)</span></div>
-                                <div class="grid-item">Giulia B., Annalisa Chiapperino, Maya Göpfert, Friederike Großmann, Laura Morales Pineda, Jasmine Schmauder, Anna Shaposhnik, Leonard Strübin</div>
+                                <div class="grid-item">Lars B., Giulia B., Annalisa Chiapperino, Maya Göpfert, Friederike Großmann, Laura Morales Pineda, Jasmine Schmauder, Anna Shaposhnik, Leonard Strübin</div>
                                 <div class="grid-item">Handcandles (Palm Torches)</div>
 
                                 <div class="grid-item">Schmerz<br><span>Ropedart</span></div>
