fixed wrong social-icon ref

--- a/impressum/index.html
+++ b/impressum/index.html
@@ -140,34 +140,34 @@
         <div class="icon-bar">
 
             <div class="icon">
-                <img class="flame-hover tg" alt="flame-hover" src="assets/img/gifs/Flamme_Icon_Hover.gif">
+                <img class="flame-hover tg" alt="flame-hover" src="../assets/img/gifs/Flamme_Icon_Hover.gif">
                 <a target="_blank" tag="tg-social-icon" href="https://t.me/theaterzurblauenstunde">
-                    <img class="social-icons tg" alt="telegram-social-icon" src="assets/img/social/website_telegram.svg">
-                    <img class="social-icons tg gold" alt="telegram-social-icon" src="assets/img/social/website_telegram_gold.svg">
+                    <img class="social-icons tg" alt="telegram-social-icon" src="../assets/img/social/website_telegram.svg">
+                    <img class="social-icons tg gold" alt="telegram-social-icon" src="../assets/img/social/website_telegram_gold.svg">
                 </a>
             </div>
 
             <div class="icon">
-                <img class="flame-hover fb" alt="flame-hover" src="assets/img/gifs/Flamme_Icon_Hover.gif">
+                <img class="flame-hover fb" alt="flame-hover" src="../assets/img/gifs/Flamme_Icon_Hover.gif">
                 <a target="_blank" tag="fb-social-icon" href="https://www.facebook.com/theaterzurblauenstunde/">
-                    <img class="social-icons fb" alt="facebook-social-icon" src="assets/img/social/website_facebook.svg">
-                    <img class="social-icons fb gold" alt="facebook-social-icon" src="assets/img/social/website_facebook_gold.svg">
+                    <img class="social-icons fb" alt="facebook-social-icon" src="../assets/img/social/website_facebook.svg">
+                    <img class="social-icons fb gold" alt="facebook-social-icon" src="../assets/img/social/website_facebook_gold.svg">
                 </a>
             </div>
 
             <div class="icon">
-                <img class="flame-hover yt" alt="flame-hover" src="assets/img/gifs/Flamme_Icon_Hover.gif">
+                <img class="flame-hover yt" alt="flame-hover" src="../assets/img/gifs/Flamme_Icon_Hover.gif">
                 <a target="_blank" tag="yt-social-icon" href="https://www.youtube.com/channel/UC4h5-kpujSkzAW2fv-g0sXw">
-                    <img class="social-icons yt" alt="youtube-social-icon" src="assets/img/social/website_youtube.svg">
-                    <img class="social-icons yt gold" alt="youtube-social-icon" src="assets/img/social/website_youtube_gold.svg">
+                    <img class="social-icons yt" alt="youtube-social-icon" src="../assets/img/social/website_youtube.svg">
+                    <img class="social-icons yt gold" alt="youtube-social-icon" src="../assets/img/social/website_youtube_gold.svg">
                 </a>
             </div>
 
             <div class="icon">
-                <img class="flame-hover ig" alt="flame-hover" src="assets/img/gifs/Flamme_Icon_Hover.gif">
+                <img class="flame-hover ig" alt="flame-hover" src="../assets/img/gifs/Flamme_Icon_Hover.gif">
                 <a target="_blank" tag="ig-social-icon" href="https://www.instagram.com/theaterzurblauenstunde/">
-                    <img class="social-icons ig" alt="instagram-social-icon" src="assets/img/social/website_instagram.svg">
-                    <img class="social-icons ig gold" alt="instagram-social-icon" src="assets/img/social/website_instagram_gold.svg">
+                    <img class="social-icons ig" alt="instagram-social-icon" src="../assets/img/social/website_instagram.svg">
+                    <img class="social-icons ig gold" alt="instagram-social-icon" src="../assets/img/social/website_instagram_gold.svg">
                 </a>
             </div>
 
