--- a/pandora-prometheus/index.html
+++ b/pandora-prometheus/index.html
@@ -6,11 +6,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" 
-            content="Erlebe 'Pandora & Prometheus - Das Lied vom Feuer': eine spektakuläre Mischung aus Feuerspiel, Live-Musik, Tanz und Schauspiel. Entdecke die mitreißende Inszenierung von Mythen und Legenden im Abenteuerzentrum Berlin. Tickets sichern!">
+            content="Erlebe eine spektakuläre Mischung aus Feuerspiel, Live-Musik, Tanz und Schauspiel. Das Event-Highlight im April und Mai in Berlin. Tickets sichern!">
 
 
     <title>
-        Theater zur blauen Stunde
+        Pandora und Prometheus - Das feurige Theater-Highlight in Berlin!
     </title>
 
     <link rel="stylesheet" href="../assets/CSS/burger.css">
@@ -42,7 +42,7 @@
     <meta name="google-site-verification" content="9o9G0k4IkoQBYAA3HHeH-cQSnS0iz2kVWwGbmmbPLPU" />
 
     <meta property="og:title" content="Pandora und Prometheus (Theater zur blauen Stunde)">
-    <meta property="og:description" content="Erlebe 'Pandora & Prometheus - Das Lied vom Feuer': eine spektakuläre Mischung aus Feuerspiel, Live-Musik, Tanz und Schauspiel. Entdecke die mitreißende Inszenierung von Mythen und Legenden im Abenteuerzentrum Berlin. Tickets sichern!">
+    <meta property="og:description" content="Erlebe eine spektakuläre Mischung aus Feuerspiel, Live-Musik, Tanz und Schauspiel. Das Event-Highlight im April und Mai in Berlin. Tickets sichern!">
     <meta property="og:image" content="https://www.blauestunde.theater/assets/img/fotos/Pandora-und-Prometheus_4320x1800-2x.webp">
     <meta property="og:url" content="https://www.blauestunde.theater/pandora-prometheus/">
     <meta property="og:type" content="website">
@@ -365,7 +365,7 @@
             </a>
         </div>
         <div>
-            <h1>Pandora & Prometheus</h1>
+            <h1>Pandora und Prometheus - Das Lied vom Feuer</h1>
         </div>
 
     </div>
