Early Bird AttentioN!!

--- a/tickets/index.html
+++ b/tickets/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" 
-            content="Sichere dir jetzt Tickets für 'Pandora & Prometheus - Das Lied vom Feuer'! Erlebe eine einzigartige Inszenierung mit Feuerspiel, Live-Musik und packender Mythologie. Nur an ausgewählten Terminen in Berlin!">
+            content="Sichere dir jetzt Tickets für 'Pandora und Prometheus - Das Lied vom Feuer'! Erlebe eine einzigartige Inszenierung mit Feuerspiel, Live-Musik und packender Mythologie. Nur an ausgewählten Terminen in Berlin!">
 
     <title>
         Theater zur blauen Stunde
@@ -92,9 +92,17 @@
         </section>
 
         <article class="tickets flex flex-column flex-align-center">
+            <div class="container">
+                <p class="attention text-c">
+                    Jetzt bis 31. März Early Bird Tickets sichern!</p></p>
+            </div>
+            
+        </article>
+
+        <article class="tickets flex flex-column flex-align-center">
             <div class="container flex flex-row flex-wrap flex-justify-between">
                 <div class="ticket-col">
-                    <h3>Pandora & Prometheus</h3>
+                    <h3><a href="/pandora-prometheus">Pandora und Prometheus</a></h3>
                     20:00-21:45 Uhr (Einlass 19 Uhr)<br>
                     📍 Abenteuerzentrum Berlin
                 </div>
@@ -103,6 +111,7 @@
                         <p class="datum">Samstag, 19. April 2025</p>
                     </div>
                     <div class="ticket-col flex flex-column flex-justify-center flex-align-end">
+                        <span>-20%</span>
                         <div><a target="_blank" class="btn text-uppercase" tag="tickets" href="https://pretix.eu/blauestunde/p-p-2025/4299191/"><i class="fa fa-ticket"></i> Tickets</a></div>
                     </div>
                 </div>
@@ -110,7 +119,7 @@
             <hr>
             <div class="container flex flex-row flex-wrap flex-justify-between">
                 <div class="ticket-col">
-                    <h3>Pandora & Prometheus</h3>
+                    <h3><a href="/pandora-prometheus">Pandora und Prometheus</a></h3>
                     20:00-21:45 Uhr (Einlass 19:00 Uhr)<br>
                     📍 Abenteuerzentrum Berlin
                 </div>
@@ -119,6 +128,7 @@
                         <p class="datum">Sonntag, 20. April 2025</p>
                     </div>
                     <div class="ticket-col flex flex-column flex-justify-center flex-align-end">
+                        <span>-20%</span>
                         <div><a target="_blank" class="btn text-uppercase" tag="tickets" href="https://pretix.eu/blauestunde/p-p-2025/4299192/"><i class="fa fa-ticket"></i> Tickets</a></div>
                     </div>
                 </div>
@@ -126,7 +136,7 @@
             <hr>
             <div class="container flex flex-row flex-wrap flex-justify-between">
                 <div class="ticket-col">
-                    <h3>Pandora & Prometheus</h3>
+                    <h3><a href="/pandora-prometheus">Pandora und Prometheus</a></h3>
                     20:15-22:00 Uhr (Einlass 19:15 Uhr)<br>
                     📍 Abenteuerzentrum Berlin
                 </div>
@@ -135,13 +145,14 @@
                         <p class="datum">Samstag, 03. Mai 2025</p>
                     </div>
                     <div class="ticket-col flex flex-column flex-justify-center flex-align-end">
+                        <span>-20%</span>
                         <div><a target="_blank" class="btn text-uppercase" tag="tickets" href="https://pretix.eu/blauestunde/p-p-2025/4299193/"><i class="fa fa-ticket"></i> Tickets</a></div>
                     </div>
                 </div>
             </div>
             <div class="container flex flex-row flex-wrap flex-justify-between">
                 <div class="ticket-col">
-                    <h3>Pandora & Prometheus</h3>
+                    <h3><a href="/pandora-prometheus">Pandora und Prometheus</a></h3>
                     20:15-22:00 Uhr (Einlass 19:15 Uhr)<br>
                     📍 Abenteuerzentrum Berlin
                 </div>
@@ -150,6 +161,7 @@
                         <p class="datum">Sonntag, 04. Mai 2025</p>
                     </div>
                     <div class="ticket-col flex flex-column flex-justify-center flex-align-end">
+                        <span>-20%</span>
                         <div><a target="_blank" class="btn text-uppercase" tag="tickets" href="https://pretix.eu/blauestunde/p-p-2025/4299194/"><i class="fa fa-ticket"></i> Tickets</a></div>
                     </div>
                 </div>
@@ -159,9 +171,9 @@
 
 
         </article>
-        <article class="tickets flex flex-column flex-align-center">
+        <article class="tickets flex flex-column flex-align-left">
             <div class="container">
-                <h4>Wichtige Infos:</h4>
+                <h2>Wichtige Infos:</h2>
                 <p> 
                     Beachtet, dass die Aufführung unter freiem Himmel stattfindet und kleidet euch entsprechend. Hinweise zum Wetter erhalten Ticketinhaber:innen ein paar Tage vor dem Aufführungstermin.
                 </p>
@@ -179,9 +191,9 @@
                         <li>Menschen über 65</li>
                     </ul>
                 </div>
-                Bitte haltet beim Einlass den entsprechenden Nachweis parat.<br>
-                Kinder und Jugendliche (bis 12 J.) sehen die Vorstellung kostenlos.
-                
+                <p>Bitte haltet beim Einlass den entsprechenden Nachweis parat.<br>
+                    Kinder und Jugendliche (bis 12 J.) sehen die Vorstellung <span>kostenlos</span>.<br></p>
+                <p>Empfohlen <span>ab 10 Jahren</span> für ein tieferes Verständnis der Handlung, aber auch Jüngere können die spektakulären Flammen und Klänge genießen (mit Begleitung).</p>
             </div>
 
         </article>
@@ -236,7 +248,7 @@
                 </div>
 
                 <div class="footer-column flex flex-column flex-wrap">
-                    <p><a href="/pandora-prometheus/">Pandora & Prometheus (2025)</a></p>
+                    <p><a href="/pandora-prometheus/">Pandora und Prometheus (2025)</a></p>
                     <p><a href="/aus-der-asche/">Aus der Asche (2020)</a></p>
                     <p><a href="/tickets">🔥 Tickets 🔥</a></p>
                 </div>
