Video wieder eingefügt

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 alt="Pandora und Prometheus -Schriftzug"
                 >
 
-            <!--<video autoplay muted loop playsinline
+            <video autoplay muted loop playsinline
                     title="Dieses Video enthält keinen Ton."
                     aria-label="Dieses Video enthält keinen Ton"
                     poster="assets/img/fotos/teaser-placeholder-1x.webp"
@@ -120,7 +120,7 @@
                 <source src="assets/videos/Teaser Website 2025.webm" type="video/webm">
                 <source src="assets/videos/Teaser Website 2025.mp4" type="video/mp4">
               
-            </video>-->
+            </video>
         </div>
 
 
