--- a/datenschutz/index.html
+++ b/datenschutz/index.html
@@ -45,8 +45,8 @@
     <div class="flex flex-align-center">
         <div class="small-logo">
             <a href="/">
-                <img src="../assets/img/logo/TZBS_Logo-Initialen.svg"
-                     alt="Logo des Theaters zur blauen Stunde mit den Buchstaben TZBS">
+                <img src="../assets/img/logo/TZBS_Logo_2025_weiss.svg"
+                        alt="Logo des Theaters zur blauen Stunde">
             </a>
         </div>
         <div>
