--- a/impressum/index.html
+++ b/impressum/index.html
@@ -34,7 +34,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="../segno.ico/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="../segno.ico/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../segno.ico/favicon-16x16.png">
-
+    <link rel="manifest" href="/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="../segno.ico/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
@@ -44,8 +44,8 @@
     <div class="flex flex-align-center">
         <div class="small-logo">
             <a href="/">
-                <img src="../assets/img/logo/TZBS_Logo-Initialen.svg"
-                     alt="Logo des Theaters zur blauen Stunde mit den Buchstaben TZBS">
+                <img src="../assets/img/logo/TZBS_Logo_2025_weiss.svg"
+                        alt="Logo des Theaters zur blauen Stunde">
             </a>
         </div>
         <div>
